# mkdocs-techdocs-diamond

./: .gitignore  .pre-commit-config.yaml  README.md  catalog-info.yaml  pyproject.toml
.devcontainer/: devcontainer.json
.github/: dependabot.yml
.github/workflows/: code.yml
src/mkdocs_techdocs_diamond/: __init__.py  config.yml  plugin.py
test-site/: .gitignore  mkdocs.yml
test-site/docs/: .pages  include.md  index.md
